# python-arrayclass

./: .gitignore  README.md  pyproject.toml
src/arrayclasses/: __init__.py  wrapper.py
tests/: test_wrapper.py
