[tool.poetry]
name = "arrayclasses"
version = "0.1.0"
description = "Analogue to dataclass that uses a numpy-backed array to store values."
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
