[tool.poetry]
name = "arrayclasses"
version = "0.1.1"
description = "Analogue to dataclass that uses a numpy-backed array to store values."
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
keywords = ["numpy", "dataclass"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Ivorforce/python-arrayclass"
repository = "https://github.com/Ivorforce/python-arrayclass"
include = [
    "LICENSE",
]
packages = [
    { include = "arrayclasses", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
